--- a/src/CHANGELOG.TXT
+++ b/src/CHANGELOG.TXT
@@ -1,6 +1,12 @@
 LightMP3 Changelog
 ------------------
 
+Version 1.7.2
+-------------
+-Fixed: A file named like "dfgeerr...mp3" wasn't recognized as an mp3
+-Fixed: Freeze on "Opening..." or no sound while playing (mostly with MP3/ATRAC3 using Media Engine)
+
+
 Version 1.7.1 (bugfix release)
 ------------------------------
 -Fixed: FLAC was broken in 1.7.0 (sorry, just a stupid mistake). ;)
