--- a/src/CHANGELOG.TXT
+++ b/src/CHANGELOG.TXT
@@ -3,9 +3,11 @@ LightMP3 Changelog
 
 Version 1.7.2
 -------------
+-Added: Sleep mode (press TRIANGLE while playing a track).
+        The psp will shut down after the track or playlist/directory
 -Added: Option to use the Sony On Screen Keyboard
--Fixed: A file named like "dfgeerr...mp3" wasn't recognized as an mp3
--Fixed: Freeze on "Opening..." or no sound while playing (mostly with MP3/ATRAC3 using Media Engine)
+-Fixed: Files named like "dfgeerr...mp3" weren't recognized as mp3
+-Fixed: Freeze on "Opening..." or time stucked at 0 after 20 tracks
 
 
 Version 1.7.1 (bugfix release)
