--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -1,6 +1,13 @@
 LightMP3 Changelog
 ------------------
 
+Version 2.0.0 BETA2
+-------------------
+-New skin system (now all the elements can be moved, see skin.cfg)
+-In the Media Library you can play a track pressing CROSS (like in the file browser)
+-You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
+
+
 Version 2.0.0 BETA1
 -------------------
 -*libMAD is now streamed, no more file size limit (based on Ghoti MusicEngine.c in pspStacklessPython).
