--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -6,6 +6,7 @@ Version 2.0.0 BETA2
 -New skin system (now all the elements can be moved, see skin.cfg)
 -In the Media Library you can play a track pressing CROSS (like in the file browser)
 -You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
+-Fixed crash in playlist editor when press UP or RIGHT on an empty list
 
 
 Version 2.0.0 BETA1
