--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -8,8 +8,10 @@ Version 2.0.0 BETA2
 -You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
 -Fixed crash in playlist editor when press UP, RIGHT or NOTE on an empty list
 -Added italian, french, german, polish, portuguese, russian language
--Added help (press L+R)
+ Many thanks to fabiom, borgqueenx, Mizou93, G-King, coach777, Magic_PSP
+-Added help (press L + R)
 -Added: you can add selected playlist to the current one (press START in the playlist browser)
+-Added: Directories are marked with a starting "/" in the file browser
 
 
 Version 2.0.0 BETA1
