--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -15,6 +15,7 @@ Version 2.0.0 BETA2
 -Fixed: stop FLAC playback
 -Added: You can check a playlist with triangle (removes dead-links)
 -Added: option for keys autorepeat interval
+-Fixed: Font (wow...the W now is ok!). ;)
 
 
 Version 2.0.0 BETA1
