--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -3,6 +3,7 @@ LightMP3 Changelog
 
 Version 2.0.0 BETA2
 -------------------
+-Switched to OSLib MOD and intraFont
 -New skin system (now all the elements can be moved, see skin.cfg)
 -In the Media Library you can play a track pressing CROSS (like in the file browser)
 -You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
@@ -16,6 +17,8 @@ Version 2.0.0 BETA2
 -Added: You can check a playlist with triangle (removes dead-links)
 -Added: option for keys autorepeat interval
 -Fixed: Font (wow...the W now is ok!). ;)
+-Fixed: Analog was working also in HOLD
+-Fixed: Minor bugs
 
 
 Version 2.0.0 BETA1
