--- a/src_v2/languages/English/lang.txt
+++ b/src_v2/languages/English/lang.txt
@@ -176,3 +176,4 @@ LOADING_SKIN=Loading new skin
 CHECKING_PLAYLIST=Checking playlist's files
 
 SETTINGS_16=Keys repeat interval
+BROWSE_TOP100=Top 100
