--- a/src_v2/languages/English/lang.txt
+++ b/src_v2/languages/English/lang.txt
@@ -1,6 +1,7 @@
 #Language   : English
 #By         : Sakya
 #Contacts   : sakya_tg@yahoo.it
+ENCODING=UTF8
 
 YES=Yes
 NO=No
@@ -176,4 +177,7 @@ LOADING_SKIN=Loading new skin
 CHECKING_PLAYLIST=Checking playlist's files
 
 SETTINGS_16=Keys repeat interval
+SETTINGS_17=Show splash screen
+
 BROWSE_TOP100=Top 100
+BROWSE_ALL=Browse all
