--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -19,9 +19,10 @@ Version 2.0.0 BETA2
 -Added: Option to enable/disable splash screen
 -Added: "Borwse All" in media library
 -Added: Cover displayed in file browser and in Media Library (stay 0.5 seconds on an item).
-        Works only with folder,jpg and cover.jpg (doesen't read coverart from ID3v2)
+        Works only with folder.jpg and cover.jpg (doesen't read coverart from ID3v2)
 -Added: Display now fades in and out when you toggle economy mode
 -Added: Music pause if you remove the headphones while listening to a track
+-Fixed: Faster navigation between functions
 -Fixed: crash in playlist editor when press UP, RIGHT or NOTE on an empty list
 -Fixed: stop FLAC playback
 -Fixed: Analog was working also in HOLD
