--- a/src_v2/CHANGELOG.TXT
+++ b/src_v2/CHANGELOG.TXT
@@ -8,8 +8,8 @@ Version 2.0.0 BETA2
         Font is defined in the skin.cfg file
 -Added: In the Media Library you can play a track pressing CROSS (like in the file browser)
 -Added: You can rate your tracks in the Media Library (CROSS + DPAD UP/DOWN)
--Added: italian, french, dutch, polish, portuguese, russian language
-        Many thanks to fabiom, borgqueenx, Mizou93, G-King, coach777, Magic_PSP
+-Added: italian, french, polish, portuguese, russian language
+        Many thanks to fabiom, Mizou93, G-King, coach777, Magic_PSP
 -Added: help (press L + R)
 -Added: you can add selected playlist to the current one (press START in the playlist browser)
 -Added: Directories are marked with a leading "/" in the file browser
